--- a/src/pages/ProductDetailPage/ProductDetailPage.scss
+++ b/src/pages/ProductDetailPage/ProductDetailPage.scss
@@ -30,7 +30,8 @@
 
   &__description {
     //description card
-    background-color: blue;
+    @include card-style;
+    background-color: white;
     padding: 0 1rem;
     margin: 1rem 0;
     border-radius: 0.5rem;
